fix background-position on firefox

--- a/dev/assets/styles/alert.styl
+++ b/dev/assets/styles/alert.styl
@@ -26,7 +26,7 @@
       div
         width 100%
         height 100%
-        background-position-x 50%
+        background-position 50%
         background-repeat no-repeat
       .info-icon
         background-image url('../img/info.png')
